Terminando de implementar servicos, ajustes na tebela de servicos, reset das migrations e ajustes no codigo

--- a/ApiControleServicos/appsettings.Development.json
+++ b/ApiControleServicos/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DELL-LUCAS;Database=ServicosEstudo;User ID=admin;Password=admin;Trusted_Connection=False;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DELL-LUCAS;Database=ApiServicos;User ID=admin;Password=admin;Trusted_Connection=False;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
