Alterando roles e implementando no controller de empresa

--- a/ApiControleServicos/appsettings.json
+++ b/ApiControleServicos/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DELL-LUCAS;Database=ApiServicos;User ID=admin;Password=admin;Trusted_Connection=False;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
