--- a/ApiControleServicos/appsettings.Development.json
+++ b/ApiControleServicos/appsettings.Development.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DELL-LUCAS;Database=ApiServicos;User ID=admin;Password=admin;Trusted_Connection=False;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=DELL-LUCAS;Database=ApiServicos;User ID=admin;Password=admin;Trusted_Connection=False;TrustServerCertificate=True;",
+    "DefaultConnection": "Server=localhost,1433;Database=ApiServicos;User ID=ApiAdmin;Password=1q2w3e4r@#$;Trusted_Connection=False;TrustServerCertificate=True;"
   },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
