--- a/ApiControleServicos/Properties/launchSettings.json
+++ b/ApiControleServicos/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5023"
+      "applicationUrl": "https://localhost:7282;http://localhost:5023"
     },
     "https": {
       "commandName": "Project",
