--- a/ApiControleServicos/appsettings.json
+++ b/ApiControleServicos/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqldata;Database=ApiServicos;User ID=SA;Password=1q2w3e4r@#$;Trusted_Connection=False;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost,1433;Database=ApiServicos;User ID=SA;Password=1q2w3e4r@#$;Trusted_Connection=False;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
