Implementando criptografia hash

--- a/ApiControleServicos/appsettings.json
+++ b/ApiControleServicos/appsettings.json
@@ -7,6 +7,10 @@
     "Issuer": "",
     "Audience": ""
   },
+  "CriptoSettings": {
+    "Key": "", //deve ter 16, 24 ou 32 caracteres de tamanho
+    "IV": "" //deve ter 16 caracteres de tamanho
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
