Adicionando a criptografia na senha do banco de dados

--- a/ApiControleServicos/ApiControleServicos.csproj
+++ b/ApiControleServicos/ApiControleServicos.csproj
@@ -36,4 +36,6 @@
     <PackageReference Include="System.Text.Json" Version="9.0.0" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="https://json.schemastore.org/architectfx.json" /></VisualStudio></ProjectExtensions>
+
 </Project>
